--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <div class="loginHeader">
             <img onclick="audioLuffy()" src="./imagens/chapeu.png" alt="icone do chapeu">
-            <audio src="/imagens/y2meta.com - Eu Sou o Monkey D. Luffy _ O Homem Que Vai Ser o Rei dos Piratas _ ONE PIECE Dublado PT_BR (192 kbps).mp3" class="audio"></audio>
+            <audio src="./imagens/y2meta.com - Eu Sou o Monkey D. Luffy _ O Homem Que Vai Ser o Rei dos Piratas _ ONE PIECE Dublado PT_BR (192 kbps).mp3" class="audio"></audio>
             <h1>Jogo da Memoria One Piece</h1>
         </div> 
         <label for="loginNome" class="nome">Nome: </label>
